--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="icon_bkg_size">450dp</dimen>
+    <dimen name="text_container_margin">15dp</dimen>
+    <dimen name="principal_text_size">50sp</dimen>
+    <dimen name="ic_temperature_size">70dp</dimen>
+    <dimen name="normal_text_size">15sp</dimen>
+    <dimen name="ic_temperature_daily_size">50dp</dimen>
+    <dimen name="medium_text_size">20sp</dimen>
+    <dimen name="daily_status_margin">10dp</dimen>
 </resources>
